ht1/yaml/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: so1-ht1-202110531
spec: {}
status: {}
