ht1/yaml/go-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: go-service
spec:
  selector:
    app: go-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
